--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="theme-color" content="#e69221">
-    <link rel="icon" sizes="192x192" href="favicon.png">
     <title>MyGen</title>
 </head>
 <body>
@@ -33,7 +32,7 @@
                         <li><a href="success.html">SUCCESS STORIES</a></li>
                         <li><a href="become.html">BECOME A COACH</a></li>
                         <li><a href="#!" id="shopbtn"><span class="shop">SHOP NOW</span></a></li>
-                        <li><a href="#login" class="min-nav modal-trigger">LOGIN</a></li>
+                        <li><a href="" class="min-nav">SIGN IN</a></li>
                         <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
                         <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
                         <li><a href="" class="min-nav">HELP</a></li>
@@ -61,15 +60,19 @@
         <ul class="slides">
 
           <li>
-            <img src="img/slides/slide1.jpg"> 
+            <img src="img/slides/slide4.jpg"> 
             <div class="caption left-align">
-                <h4 class="slide-text bold-text">
-                Genetic testing for<br>
-                personalized<br>
-                supplements
+                <h4 class="slide-text bold-text white-text">
+                        Quienes Somos
                 </h4>
-              <h6 class="slide-text light">Your are unique, so it should be<br>your supplements</h6><br>
-              <a href=""><span class="shop">SHOP NOW</span></a>
+              <h6 class="slide-text white-text light">
+                    Nuestro compromiso es seguir innovando <br>
+                    en el campo de la genética personal con el fin de que  <br>
+                    las personas conozcan sus limitaciones y capacidades  <br>
+                    máximas para adaptar su estilo de vida a la obtención  <br>
+                    de mejores beneficios
+                </h6>
+    
             </div>
           </li>
           
@@ -79,119 +82,59 @@
 
 <!--============================== MAIN ===========================--> 
 
-<main class="row">
+<main class="row animated fadeIn">
 
     <div id="firstMain" class="col s12 center-align">
         <div class="container">
-            <h5 class="bold-text" >WELCOME TO THE START OF A  <br> LIFE-CHANGING JOURNEY</h5> 
+            <h5 class="bold-text" >CONTACTO</h5> 
             <br>
-            <p>Tus genes no solo determinan como te ves, si no que también en como responde tu cuerpo al ejercicio físico, consumo alimentos  y a las condiciones del medio ambiente. Conocer y entender tus genes te permite hacer cambios en tu estilo de vida y ser la mejor versión de ti</p>
-            <br>
-            <p class="bold-text">HOW IT WORKS</p>
-            <div id="how-it-works" class="col s12 m12 l8 push-l2 ">
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".1s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>1</p><span>asd</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".2s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>2</p><span>YOU WILL RECEIVE A MYGEN COLLECTION KIT FOR TAKING BUCCAL SAMPLES</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".3s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>3</p><span>SET A GOAL</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".4s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>4</p><span>PRE-PAID SHIPPING TO TAAG LAB</span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".5s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>5</p><span>IN TWO WEEKS REVIEW YOUR DNA TEST RESULTS </span></div>
-                <div class="col l2 m2 s6  min-text wow bounceIn" data-wow-delay=".6s"><img src="img/icons/dna-structure.svg" alt="" class="how-it-works-img"><p>6</p><span>GET YOUR PERSONALIZED FORMULATION</span></div>
-            </div>
+            <p>Siempre estamos abiertos a responder tus dudas</p>
         </div>
     </div>
 
-    <div id="secondMain" class="col s12 center-align">
+    <div class="col s12 marginTop30 marginBotom30">
         <div class="container">
-            <h5 class="bold-text">WE HELP YOU ALONG ALL <br> JOURNEY, NOT JUST THE BEGINNING</h5> <br>
-            <p>We take a comprehensive strategy so you can have truly actionable results. <br>It starts with genetic testing until personalized dietary supplements and expert advice to achieve your goals.</p>
-            <div id="secondMainImg" class="col s12">
-                <div class="col s6 m3">
-                    <img src="img/icons/dna-structure.svg" class="wow fadeIn" data-wow-delay=".1s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/conversation.svg" class="wow fadeIn"  data-wow-delay=".2s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/medicine.svg" class="wow fadeIn" data-wow-delay=".3s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-                <div class="col s6 m3">
-                    <img src="img/icons/bullseye.svg" class="wow fadeIn" data-wow-delay=".4s" alt="">
-                    <p class="bold-text">YOUR DNA IS JUST THE BEGINNING</p>
-                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. aut quos reprehenderit ullam nisi eligendi?</span>
-                </div>
-            </div>
-            <div class="col s12">
-                <img src="img/shadow.png" class="responsive-img" alt="">
-            </div>
-            <div class="col s12">
-                <img src="img/icons/atom.svg" class="col s6 m2 l2 push-s3 push-m5 push-l5 wow bounceIn" data-wow-delay=".5s" height="64px" width="64p`x" alt="">
-            </div>
-            <div class="col s6 m6 l6 push-s3 push-m3 push-l3">
-                <p class="bold-text">
-                    ACTIONABLE RESULTS!
-                </p>
-                <span>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, delectus sapiente, vitae atque, animi.
-                </span>
-                <div id="getYourText">
-                    <a href="" class="shop black-text">GET YOUR TEXT</a>
-                </div>        
-            </div>
-        </div>
-    </div>
+            <div class="col s12 m6 marginTop30">
 
-    <div class="col s12 center-align" id="thirdMain">
-        <div class="container">
-            <p class="bold-text">OUR COMMITMENT</p>
-            <p>MyGen products are committed to delivering you the most update scientific recommendations. As the science
-                evolves, so will your results, supplement and nutrition plan. We're committed to an ongoing relationship with you—so
-                you always will have new genetic tests and supplements available to help you to reach your goals and to achieve the      
-                best version of you.</p>
+                <div class="col s12 fieldContact">
+                    <div class="col s2 fieldImg">
+                        <img src="img/icons/home.png" alt="">
+                    </div>
+                    <div class="col s9 fieldText">
+                        TELEFONO
+                        <br> +56 2 32100704
+                    </div>
+                </div>
+                <div class="col s12 fieldContact">
+                    <div class="col s2 fieldImg">
+                        <img src="img/icons/home.png" alt="">
+                    </div>
+                    <div class="col s9 fieldText">
+                        TELEFONO
+                        <br> +56 2 32100704
+                    </div>
+                </div>
+                <div class="col s12 fieldContact">
+                    <div class="col s2 fieldImg">
+                        <img src="img/icons/home.png" alt="">
+                    </div>
+                    <div class="col s9 fieldText">
+                        TELEFONO
+                        <br> +56 2 32100704
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1618.2220397166323!2d-70.57259221494544!3d-33.38988184179488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sJuan+XXIII+6130%2C+Edificio+Vitaspace%2C+Local+1%2C+Vitacura!5e0!3m2!1ses-419!2smx!4v1534710257196"
+                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
 </main>
 
 <!--============================== MAIN ===========================--> 
-<!--============================== LOGIN ===========================--> 
-    <div id="login" class="modal">
-        <div class="modal-content center-align">
-            <h4>
-                <a href="index.html" class="brand-logo bold">My
-                    <span class="accent-text-b">GEN</span>
-                </a>
-            </h4>
-            <h5 class="bold-text accent-text-b">INICIAR SESION</h5>
-            <form action="dashHome.html" class="row">
 
-                <div class="input-field col s12 m8 push-m2 ">
-                    <input id="email" type="email" class="validate" required>
-                    <label for="email">Correo Electrónico</label>
-                </div>
-                <div class="input-field col s12 m8 push-m2 ">
-                    <input id="password" type="password" class="validate" required>
-                    <label for="password">Contraseña</label>
-                </div>
-                <div  class="col s12">
-                    <button class="waves-effect btn orange white-text">
-                            INICIAR SESIÓN
-                    </button>
-                </div>
-                <div class="col s12 marginTop30">
-                    <a href="" class="orange-text">¿Olvidaste tu contraseña?</a>
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-red btn-flat">CANCELAR</a>
-        </div>
-    </div>
-<!--============================== LOGIN ===========================-->       
 <!--============================== FOOTER ===========================-->          
     <footer class="page-footer">
         <div class="footer">
@@ -286,7 +229,6 @@
                 height: 410
             });
             new WOW().init();
-            $('#login').modal();
         });
     </script>
 </body>
