--- a/order.html
+++ b/order.html
@@ -277,39 +277,39 @@
 
                         <div class="">
                             <div class="input-field col s6">
-                                <input id="first_name" type="text" id="first_name" class="validate" required>
+                                <input id="first_name" type="text" class="validate" required>
                                 <label for="first_name">First Name</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="last_name" type="text" id="last_name" class="validate" required>
+                                <input id="last_name" type="text" class="validate" required>
                                 <label for="last_name">Last Name</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="birth_day" type="date" placeholder="Birth Day" id="birth_day" class="validate" required>
+                                <input id="birth_day" type="date" placeholder="Birth Day" class="validate" required>
                                 <label for="birth_day">Birth Day</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="mobile" type="number" id="mobile" class="validate" required>
+                                <input id="mobile" type="number"  class="validate" required>
                                 <label for="mobile">Mobile</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="email" type="email" id="email" class="validate" required>
+                                <input id="email" type="email" class="validate" required>
                                 <label for="email">Email</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="email_co" type="email" id="email_co" class="validate" required>
+                                <input id="email_co" type="email" iclass="validate" required>
                                 <label for="email_co">Confirm Email</label>
                             </div>
 
                             <div class="input-field col s6">
-                                <input id="coachNum" type="text" id="coachNum" class="validate">
+                                <input id="coachNum" type="text" class="validate">
                                 <label for="coachNum">MyGEN Coach number?
-                                    <a id="helpGoals" class="tooltipped grey-text" data-position="left" data-tooltip="lorem">
+                                    <a id="helpGoals" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
                                         <i class="material-icons" style="font-size: 20px">help_outline</i>
                                     </a>
                                 </label>
@@ -318,7 +318,7 @@
                             <div class="input-field col s6">
                                 <input id="kit" type="text" id="kit" class="validate">
                                 <label for="kit">Do you have kit? enter the barcode
-                                    <a id="helpGoals" class="tooltipped grey-text" data-position="left" data-tooltip="lorem">
+                                    <a id="helpGoals" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
                                         <i class="material-icons" style="font-size: 20px">help_outline</i>
                                     </a>
                                 </label>
@@ -343,10 +343,42 @@
                     </div>
 
                     <div class="col s12 collapsible-body" id="shippingContent">
-                        <hr class="col s12"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum iste perspiciatis, harum unde,
-                        dicta ab quasi atque tempore optio amet, odio cumque molestias accusamus. Labore repellat molestiae
-                        deleniti mollitia molestias!
-
+                        <div class="input-field col s6">
+                            <input id="first_name_shipping" type="text" class="validate" required>
+                            <label for="first_name_shipping">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="last_name_shipping" type="text" class="validate" required>
+                            <label for="last_name_shipping">Last Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="street" type="text" class="validate" required>
+                            <label for="street">Street </label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="streetNum" type="text" class="validate" required>
+                            <label for="streetNum">Street number</label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="city" type="text" class="validate" required>
+                            <label for="city">City</label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="zip" type="text" class="validate" required>
+                            <label for="zip">ZIP Code
+                                <a id="zipTool" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
+                                    <i class="material-icons" style="font-size: 20px">help_outline</i>
+                                </a>
+                            </label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="comuna" type="text" class="validate" required>
+                            <label for="comuna">Comuna</label>
+                        </div>
+                        <div class="input-field col s3">
+                            <input id="phone" type="number" class="validate" required>
+                            <label for="phone">Phone number</label>
+                        </div>                
                         <div class="col s12 center-align" id="shippingDiv">
                             <a href="#!" class="next " id="nextShopping">
                                 NEXT
@@ -364,7 +396,7 @@
                         <h6 class="left bold-text">PAYMENT</h6>
                     </div>
 
-                    <div class="col s12 collapsible-body" id="shippingContent">
+                    <div class="col s12 collapsible-body" id="paymentContent">
                         <hr class="col s12"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum iste perspiciatis, harum unde,
                         dicta ab quasi atque tempore optio amet, odio cumque molestias accusamus. Labore repellat molestiae
                         deleniti mollitia molestias!
