--- a/welcome.html
+++ b/welcome.html
@@ -12,6 +12,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import CSS-->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
@@ -54,7 +55,7 @@
                             on your MyGEN kit
                             </p>
                             <p>
-                                <a href="" class="shop black-text" id="activateKitBtn">ACTIVATE KIT</a>
+                                <a href="activatekit.html" class="shop black-text" id="activateKitBtn">ACTIVATE KIT</a>
                             </p>
                             <p class="min-text bold-text">
                                 <a href="" class="black-text">Something wrong?</a>
