--- a/products.html
+++ b/products.html
@@ -11,6 +11,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import CSS-->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
@@ -20,30 +21,30 @@
 </head>
 <body>
 <!--============================== INICIO NAV ===========================-->
-        <div class="navbar-fixed">
-            <nav>
-                <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo bold">My<span>GEN</span><div>Supplemented by TAAG Genetics</div></a>      
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="products.html" class="super">PRODUCTS</a></li>
-                        <li><a href="">HOW IT WORKS</a></li>
-                        <li><a href="">SUCCESS STORIES</a></li>
-                        <li><a href="become.html">BECOME A COACH</a></li>
-                        <li><a href="#!" id="shopbtn"><span class="shop">SHOP NOW</span></a></li>
-                        <li><a href="" class="min-nav">SIGN IN</a></li>
-                        <li><a href="" class="min-nav">ACTIVATE KIT</a></li>
-                        <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
-                        <li><a href="" class="min-nav">HELP</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+<div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="index.html" class="brand-logo bold">My<span>GEN</span><div>Supplemented by TAAG Genetics</div></a>      
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="products.html" class="super">PRODUCTS</a></li>
+                    <li><a href="">HOW IT WORKS</a></li>
+                    <li><a href="success.html">SUCCESS STORIES</a></li>
+                    <li><a href="become.html">BECOME A COACH</a></li>
+                    <li><a href="#!" id="shopbtn"><span class="shop">SHOP NOW</span></a></li>
+                    <li><a href="#login" class="min-nav modal-trigger">LOGIN</a></li>
+                    <li><a href="activatekit.html" class="min-nav">ACTIVATE KIT</a></li>
+                    <li><a href="" id="shopping-cart-btn"><img src="img/icons/shopping-cart.svg" class="shopping-cart" alt="shopping-cart"><span class="shopping-cart-noti">0</span></a></li>
+                    <li><a href="" class="min-nav">HELP</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 <!-- mobile-demo -->    
         <ul class="sidenav" id="mobile-demo">
                 <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="">HOW IT WORKS</a></li>
-                <li><a href="">SUCCESS STORIES</a></li>
+                <li><a href="success.html">SUCCESS STORIES</a></li>
                 <li><a href="become.html">BECOME A COACH</a></li>
                 <li><a href="#!" id="shopbtn"><span>SHOP NOW</span></a></li>
                 <li><a href="" class="min-nav">SIGN IN</a></li>
@@ -59,7 +60,7 @@
         <ul class="slides">
 
           <li>
-            <img src=""> 
+            <img src="img/slides/slide3.jpg"> 
             <div class="caption left-align">
                 <h4 class="slide-text bold-text">
                 Genetically tailored <br>
@@ -273,7 +274,40 @@
 </main>
 
 <!--============================== MAIN ===========================--> 
+<!--============================== LOGIN ===========================--> 
+<div id="login" class="modal">
+        <div class="modal-content center-align">
+            <h4>
+                <a href="index.html" class="brand-logo bold">My
+                    <span class="accent-text-b">GEN</span>
+                </a>
+            </h4>
+            <h5 class="bold-text accent-text-b">INICIAR SESION</h5>
+            <form action="dashHome.html" class="row">
 
+                <div class="input-field col s12 m8 push-m2 ">
+                    <input id="email" type="email" class="validate" required>
+                    <label for="email">Correo Electrónico</label>
+                </div>
+                <div class="input-field col s12 m8 push-m2 ">
+                    <input id="password" type="password" class="validate" required>
+                    <label for="password">Contraseña</label>
+                </div>
+                <div  class="col s12">
+                    <button class="waves-effect btn orange white-text">
+                            INICIAR SESIÓN
+                    </button>
+                </div>
+                <div class="col s12 marginTop30">
+                    <a href="" class="orange-text">¿Olvidaste tu contraseña?</a>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-red btn-flat">CANCELAR</a>
+        </div>
+    </div>
+<!--============================== LOGIN ===========================-->  
 
 <!--============================== FOOTER ===========================-->          
 <footer class="page-footer">
@@ -372,6 +406,8 @@
             $('.modal').modal();
             $('.collapsible').collapsible();
             $('.tooltipped').tooltip();
+            $('#login').modal();
+
         });
     </script>
 </body>
