--- a/order.html
+++ b/order.html
@@ -309,7 +309,7 @@
                             <div class="input-field col s6">
                                 <input id="coachNum" type="text" class="validate">
                                 <label for="coachNum">MyGEN Coach number?
-                                    <a id="helpGoals" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
+                                    <a id="helpGoals" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem">
                                         <i class="material-icons" style="font-size: 20px">help_outline</i>
                                     </a>
                                 </label>
@@ -318,7 +318,7 @@
                             <div class="input-field col s6">
                                 <input id="kit" type="text" id="kit" class="validate">
                                 <label for="kit">Do you have kit? enter the barcode
-                                    <a id="helpGoals" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
+                                    <a id="helpGoals" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem">
                                         <i class="material-icons" style="font-size: 20px">help_outline</i>
                                     </a>
                                 </label>
@@ -365,9 +365,8 @@
                         </div>
                         <div class="input-field col s3">
                             <input id="zip" type="text" class="validate" required>
-                            <label for="zip">ZIP Code
-                                <a id="zipTool" class="tooltipped grey-text" data-position="right" data-tooltip="lorem">
-                                    <i class="material-icons" style="font-size: 20px">help_outline</i>
+                            <label for="zip">
+                                ZIP Code<a id="zipTool" class="tooltipped grey-text hide-on-small-only" data-position="right" data-tooltip="lorem"><i class="material-icons" style="font-size: 20px">help_outline</i>
                                 </a>
                             </label>
                         </div>
