--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                     <div class="col s2 fieldImg">
                         <img src="img/icons/home.png" alt="">
                     </div>
-                    <div class="col s9 fieldText">
+                    <div class="col s10 fieldText">
                         TELEFONO
                         <br> +56 2 32100704
                     </div>
@@ -109,7 +109,7 @@
                     <div class="col s2 fieldImg">
                         <img src="img/icons/home.png" alt="">
                     </div>
-                    <div class="col s9 fieldText">
+                    <div class="col s10 fieldText">
                         TELEFONO
                         <br> +56 2 32100704
                     </div>
@@ -118,7 +118,7 @@
                     <div class="col s2 fieldImg">
                         <img src="img/icons/home.png" alt="">
                     </div>
-                    <div class="col s9 fieldText">
+                    <div class="col s10 fieldText">
                         TELEFONO
                         <br> +56 2 32100704
                     </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="col s12 m6">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1618.2220397166323!2d-70.57259221494544!3d-33.38988184179488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sJuan+XXIII+6130%2C+Edificio+Vitaspace%2C+Local+1%2C+Vitacura!5e0!3m2!1ses-419!2smx!4v1534710257196"
-                    width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
