--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/alertify.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="theme-color" content="#e69221">
     <link rel="icon" sizes="192x192" href="favicon.png">
@@ -178,7 +179,7 @@
                     <label for="password">Contraseña</label>
                 </div>
                 <div  class="col s12">
-                    <button class="waves-effect btn orange white-text">
+                    <button id="login" class="waves-effect btn orange white-text">
                             INICIAR SESIÓN
                     </button>
                 </div>
@@ -277,6 +278,8 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/addCart.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/alertify.min.js"></script>
+    <script src="js/validate.js"></script>
     <script>
       $(document).ready(function(){
 
@@ -287,6 +290,15 @@
             });
             new WOW().init();
             $('#login').modal();
+            
+
+    window.addEventListener("load",function() {
+      setTimeout(function(){
+        window.scrollTo(0, 10);
+      }, 0);
+    });
+
+
         });
     </script>
 </body>
